slight fix to alignment of dashboard  widgets

--- a/src/stylesheets/vortex/page-dashboard.scss
+++ b/src/stylesheets/vortex/page-dashboard.scss
@@ -14,11 +14,11 @@
 }
 
 .fixed-width-1 {
-  width: 33%;
+  width: 33.3%;
 }
 
 .fixed-width-2 {
-  width: 67%;
+  width: 66.6%;
 }
 
 .fixed-width-3 {
